network_policies/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  labels:
    exam: netpol
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: mysql-db
    exam: netpol
  name: mysql-db
spec:
  containers:
  - image: mysql:5.6
    name: mysql-db
    ports:
    - containerPort: 3306
      protocol: TCP
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql-service
    exam: netpol
  name: mysql-service
spec:
  ports:
  - name: mysql-port
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-db
    exam: netpol
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: web-app
    exam: netpol
  name: web-app
spec:
  containers:
  - image: bmuschko/web-app:1.0.1
    name: web-app
    ports:
    - containerPort: 3000
      protocol: TCP
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web-app-service
    exam: netpol
  name: web-app-service
spec:
  ports:
  - name: web-app-port
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: web-app
    exam: netpol
  type: NodePort
status:
  loadBalancer: {}
